# whimsy

./: Cargo.toml  license.md  readme.md
src/: cli.rs  config.rs  keybind.rs  main.rs  util.rs  window.rs
