[package]
name = "whimsy"
description = "A window manager for Windows"
version = "0.1.0"
authors = ["Lily Brown <lily@lily.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

log = "0.4"
pretty_env_logger = "0.4.0"

serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"

dirs = "3"

clap = "2"
structopt = "0.3"