[package]
name = "whimsy"
description = "A window manager for Windows"
version = "0.1.0"
authors = ["Lily Brown <lily@lily.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

log = "0.4"
pretty_env_logger = "0.4.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"

dirs = "3"

clap = "2"
structopt = "0.3"

color-eyre = "0.5"
thiserror = "1.0"

lazy_static = "1.4.0"
dotenv = "0.15"